--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,16 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #ffffff;
+    background: linear-gradient(to bottom, #a200ff, #000000);
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 1200px;
     margin: 0;
 }
 
 .card {
-    width: 400px; 
-    background-color: #1f1f44;
+    width: 450px;
+    background-color: #461b77;
     border-radius: 8px;
     overflow: hidden;
     text-align: center;
@@ -18,27 +18,27 @@ body {
 }
 
 .card:hover {
-    background-color: #333399; 
-    transform: scale(1.05); 
+    background-color: #3f0052;
+    transform: scale(1.05);
 }
 
 .card h2 {
     font-size: 1.5rem;
     margin: 0;
     color: #ffffff;
-    padding: 20px; 
+    padding: 20px;
 }
 
 .card img {
-    width: 90%;
-    height: 200px;
+    width: 100%;
+    max-height: 550px;
     object-fit: cover;
     border-radius: 8px;
     transition: transform 0.3s ease;
 }
 
 .card:hover img {
-    transform: scale(1.1); 
+    transform: scale(1.05);
 }
 
 .card .content {
@@ -49,3 +49,4 @@ body {
 .card p {
     margin: 10px 0;
 }
+
