--- a/css/index.css
+++ b/css/index.css
@@ -50,3 +50,41 @@ body {
     margin: 10px 0;
 }
 
+.qualities {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.qualities h2 {
+    font-size: 1.5rem;
+    color: #ffffff;
+    margin-bottom: 20px;
+}
+
+.qualities .card {
+    width: 300px;
+    background-color: #461b77;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    padding: 10px;
+    text-align: center;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.qualities .card:hover {
+    background-color: #3f0052;
+    transform: scale(1.05);
+}
+
+.qualities .card h3 {
+    font-size: 1.2rem;
+    margin: 0;
+    color: #ffffff;
+}
+
+.qualities .card p {
+    margin: 10px 0;
+    color: #ffffff;
+}
