--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,7 @@ body {
     overflow: hidden;
     text-align: center;
     transition: background-color 0.3s ease, transform 0.3s ease;
+    
 }
 
 .card:hover {
@@ -53,18 +54,12 @@ body {
 .qualities {
     margin-top: 30px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.qualities h2 {
-    font-size: 1.5rem;
-    color: #ffffff;
-    margin-bottom: 20px;
+    flex-wrap: wrap; 
+    justify-content: space-between;
 }
 
 .qualities .card {
-    width: 300px;
+    width: calc(33.33% - 20px); 
     background-color: #461b77;
     border-radius: 8px;
     margin-bottom: 20px;
@@ -87,4 +82,23 @@ body {
 .qualities .card p {
     margin: 10px 0;
     color: #ffffff;
+}
+
+.qualities .card img {
+    width: 100%;
+    max-height: 175px; 
+    object-fit: cover;
+    border-radius: 8px;
+    transition: transform 0.3s ease;
+}
+
+.qualities-container {
+    text-align: center; /* Centralize o conteúdo horizontalmente */
+    margin-top: 20px; /* Espaçamento superior */
+    color: #ffffff;
+}
+
+.qualities-title {
+    font-size: 1.5rem;
+    margin: 0;
 }
