--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,10 @@
 body {
     font-family: Arial, sans-serif;
-    background: linear-gradient(to bottom, #a200ff, #000000);
+    background: linear-gradient(to bottom, #a200ff, #530e7a);
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 1200px;
+    height: 1000px;
     margin: 0;
 }
 
@@ -85,8 +85,8 @@ body {
 }
 
 .qualities .card img {
-    width: 70%;
-    max-height: 100px; 
+    width: 50%;
+    max-height: 75px; 
     object-fit: cover;
     border-radius: 8px;
     transition: transform 0.3s ease;
