--- a/css/index.css
+++ b/css/index.css
@@ -93,8 +93,8 @@ body {
 }
 
 .qualities-container {
-    text-align: center; /* Centralize o conteúdo horizontalmente */
-    margin-top: 20px; /* Espaçamento superior */
+    text-align: center; 
+    margin-top: 20px; 
     color: #ffffff;
 }
 
@@ -102,3 +102,45 @@ body {
     font-size: 1.5rem;
     margin: 0;
 }
+
+header {
+    background-color: #461b77;
+    padding: 10px 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+nav {
+    text-align: center;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 15px;
+}
+
+nav ul li:last-child {
+    margin-right: 0;
+}
+
+nav a {
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 1.1rem;
+    transition: color 0.3s ease;
+}
+
+nav a:hover {
+    color: #a200ff;
+}
+
+
